--- a/smart-park/pom.xml
+++ b/smart-park/pom.xml
@@ -54,6 +54,31 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.datafaker</groupId>
+			<artifactId>datafaker</artifactId>
+			<version>2.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.13.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency> 
+			<groupId>org.springdoc</groupId> 
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId> 
+			<version>2.6.0</version> 
+		</dependency> 
+		<dependency> 
+			<groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter-hateoas</artifactId> 
+		</dependency> 
 	</dependencies>
 
 	<build>
