--- a/smart-park/src/main/resources/application.properties
+++ b/smart-park/src/main/resources/application.properties
@@ -8,3 +8,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.profiles.active=dev
+
+#conexion lan
+server.address=0.0.0.0
+server.port=8080
+
+springdoc.api-docs.enabled=true 
+springdoc.swagger-ui.enabled=true 
+springdoc.swagger-ui.path=/doc/swagger-ui.html 
+
